# InsightFlow

./: .gitignore  LICENSE  README.md  README_en.md
bridge/: README.md  background.js  manifest.json
insight-app/: dashboard.html  fix_theme.cjs  index.html  note.html  package-lock.json  package.json  test_note_fetch.txt  vite.config.ts
insight-app/src-tauri/: Cargo.toml  tauri.conf.json
insight-app/src-tauri/capabilities/: default.json
insight-app/src-tauri/src/: autostart.rs  classifier.rs  db.rs  http_server.rs  lib.rs  main.rs  models.rs  monitor.rs
insight-app/src/dashboard/: App.vue  style.css
insight-app/src/dashboard/components/: DatePicker.vue  NoteCard.vue
insight-app/src/note/: App.vue  main.ts
insight-app/src/overlay/: App.vue  DistractToast.vue  ModuleProgress.vue  NotesPanel.vue  PomodoroTimer.vue  SettingsPanel.vue  TodoList.vue  style.css  types.ts
insight-app/src/overlay/composables/: useDistraction.ts  useNote.ts  usePomodoro.ts  useTodo.ts
insight-app/src/shared/: constants.ts  i18n.ts
insight-app/src/shared/components/: ChecklistEditor.vue
insight-app/src/shared/composables/: useNoteCore.ts
insight-app/src/shared/locales/: en.ts  zh-CN.ts
insight-daemon/: Cargo.toml
insight-daemon/src/: classifier.rs  db.rs  main.rs  models.rs  monitor.rs
