[package]
name = "insight-app"
version = "0.1.0"
edition = "2021"
description = "InsightFlow - Tauri desktop app"

[lib]
name = "insight_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-positioner = "2"

# Windows API
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
] }

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP server for browser extension bridge
axum      = "0.8"
tokio     = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
tower-http = { version = "0.6", features = ["cors"] }

# Utilities
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
chrono       = { version = "0.4", features = ["serde"] }
log          = "0.4"
env_logger   = "0.11"
parking_lot  = "0.12"
toml         = "0.8"
regex        = "1"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
